
2010-04-13:
Added CmdExtensions to socialcalc-3.js, and the startcmdextension command.

2010-05-07:
Implemented drag handles for fill/move using a single image with a round, segmented palette. Added sc-drag-handles.png.

2010-05-12:
Added SocialCalc.CtrlSEditor to socialcalctableeditor.js and socialcalcspreadsheetcontrol.js.
Use "edit:partname" command to edit, "edit:" to list all parts and contents. No text deletes part.
Added SocialCalc.OtherSaveParts to socialcalcspreadsheetcontrol.js.
This all gives us a way to set startup macros, etc.

2010-05-13:
Fixed IE6 and IE7+ compatibility issues with drag palette. Uses .gif for IE6, .png otherwise.


TO DO:

Make defaultCommentStyle work with defaultImagePrefix.

Handle bad settings
Make sure insert/delete row/col and move handle name coord changing undo, especially wrt #REF!.
Need some way to abort recalc -- like pressing Esc?


Limit undo size?
1 row scroll of high cells doesn't update row height values or something -
 scroll in Merges and Scrolling when 2 panes -- may be dragging when scrolled
 doesn't know trying to set too far: check test
Bug in SocialCalc.pm: adjust_formula_coords refs to deleted cells -- doesn't handle multiple
Bug in Sheet.pm: test_criteria tests "value" instead of "type" for left error
Check SheetFunctions.pm: Dseries with criteria of "0" -- checks for blank as !criteria, not length
 Also, see double testcol setting.
INDEX function (and range return from evaluate polish) does not handle other sheets.
 Make DecodeRangeParts get that stuff to make it easy?
Bug in SheetFunctions.pm: StringFunctions error doesn't return right away
 RIGHT has -1 args?
 InterestFunctions: should be -3 args?
 IRR check for values?
Bug in Sheet.pm: evaluate_parsed_formula return of range doesn't swap sheetname!coord
Sheet.ResetSheet doesn't seem to work well -- it does not recalc or redisplay well afterward
